# SpaceAdventures

./: .gitattributes  .gitignore  CMakeLists.txt  LICENSE.md
cmake_modules/: FindBox2D.cmake
src/: main.cpp
src/SoureCode/Contract/: Entity.cpp  Entity.hpp  State.cpp  State.hpp
src/SoureCode/Contract/Ables/: Activatable.cpp  Activatable.hpp  Drawable.cpp  Drawable.hpp  Eventable.cpp  Eventable.hpp  Initialable.cpp  Initialable.hpp  Pauseable.cpp  Pauseable.hpp  Selectable.cpp  Selectable.hpp  Stylable.cpp  Stylable.hpp  StylableStates.hpp  StylableStyle.hpp  StylableTypes.hpp  Updatable.cpp  Updatable.hpp
src/SoureCode/Core/: DebugDraw.cpp  DebugDraw.hpp  EventEmitter.cpp  EventEmitter.hpp  Game.cpp  Game.hpp
src/SoureCode/Core/Event/: EventCallback.hpp  EventEmitter.cpp  EventEmitter.hpp  EventListener.cpp  EventListener.hpp
src/SoureCode/Entity/: State.cpp  State.hpp
src/SoureCode/Manager/: ResourceManager.cpp  ResourceManager.hpp  StateManager.cpp  StateManager.hpp
src/SoureCode/UI/: Button.cpp  Button.hpp  Styles.cpp  Styles.hpp
src/SoureCode/UI/Button/: Button.cpp  Button.hpp
src/SoureCode/UI/Stylables/: Background.cpp  Background.hpp  Border.cpp  Border.hpp
src/SpaceAdventures/: Kernel.cpp  Kernel.hpp
src/SpaceAdventures/Entity/: Entity.cpp  Entity.hpp
src/SpaceAdventures/State/: LoadState.cpp  LoadState.hpp  MenuState.cpp  MenuState.hpp
